spacing fix

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -238,7 +238,7 @@
 	#about {
 		background-color: #729799;
 		min-height: 100%;
-		padding: 35% 10px;
+		padding: 10vh 10px;
 		text-align: center;
 		z-index: 1;
 	}
